fixed the window size (pages were overflowing)

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+@import "style.css";
 
 .header {
     width: 100%;
-    height: 40px;
+    height: 60px;
     background-color: white;
     align-items: center;
     border-bottom: 1px solid #949393;
