--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     background-color: whitesmoke;
-    width: 240px;
+    min-width: 240px;
     text-align: left;
 }
 
