--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,12 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-a {
-  color: #00B7FF;
+body {
+  display: flex;
 }
